[package]
name = "rustens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "1f807bb7c288a1d2668c691839381786065b2eac" }
tokio = "1.14.0"
